Fix shop demo form to fix perfectly on small phone screens

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -520,6 +520,22 @@ a.close-reveal-modal:hover {
   }
 }
 
+// Fix for demo forms on really small phone screens
+fieldset {
+  min-width: 210px;
+}
+
+// Reduce wasted spaces in small phone screens
+@media #{$small-only} {
+  .super-small-padding {
+    padding: 2px;
+  }
+
+  .super-small-overflow {
+    overflow: hidden;
+  }
+}
+
 /* Parsley Form validation CSS */
 
 input.parsley-success,
